[gd_scene load_steps=5 format=4 uid="uid://bbw7ice568afm"]

[ext_resource type="Script" path="res://Scripts/upnp_test.gd" id="1_x5vt7"]
[ext_resource type="Texture2D" uid="uid://d1nd2lxukc7gg" path="res://Assets/Tiles/tile_test.png" id="2_rwqe7"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xgax2"]
texture = ExtResource("2_rwqe7")
texture_region_size = Vector2i(80, 80)
0:0/next_alternative_id = 5
0:0/0 = 0
0:0/1 = 1
0:0/1/modulate = Color(0.614449, 0.0043362, 0.999133, 1)
0:0/2 = 2
0:0/2/modulate = Color(0.412554, 0.370312, 0.971998, 1)
0:0/3 = 3
0:0/3/modulate = Color(0.23, 0.1403, 0.150765, 1)
0:0/4 = 4
0:0/4/modulate = Color(0.53, 0.106, 0.310933, 1)
1:0/next_alternative_id = 2
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-40, -40, 40, -40, 40, 40, -40, 40)
1:0/1 = 1
1:0/1/modulate = Color(0.53, 0.106, 0.310933, 1)
1:0/1/physics_layer_0/polygon_0/points = PackedVector2Array(-40, -40, 40, -40, 40, 40, -40, 40)
2:0/next_alternative_id = 2
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-40, -40, 40, -40, 40, 40, -40, 40)
2:0/1 = 1
2:0/1/modulate = Color(0.53, 0.106, 0.310933, 1)
2:0/1/physics_layer_0/polygon_0/points = PackedVector2Array(-40, -40, 40, -40, 40, 40, -40, 40)
3:0/next_alternative_id = 2
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-40, -40, 40, -40, 40, 40, -40, 40)
3:0/1 = 1
3:0/1/modulate = Color(0.53, 0.106, 0.310933, 1)
3:0/1/physics_layer_0/polygon_0/points = PackedVector2Array(-40, -40, 40, -40, 40, 40, -40, 40)
3:1/next_alternative_id = 2
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-40, -40, 40, -40, 40, 40, -40, 40)
3:1/1 = 1
3:1/1/modulate = Color(0.53, 0.106, 0.310933, 1)
3:1/1/physics_layer_0/polygon_0/points = PackedVector2Array(-40, -40, 40, -40, 40, 40, -40, 40)
2:1/next_alternative_id = 2
2:1/0 = 0
2:1/1 = 1
2:1/1/modulate = Color(0.53, 0.106, 0.310933, 1)
2:1/1/physics_layer_0/polygon_0/points = PackedVector2Array(-40, -40, 40, -40, 40, 40, -40, 40)
1:1/next_alternative_id = 2
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-40, -40, 40, -40, 40, 40, -40, 40)
1:1/1 = 1
1:1/1/modulate = Color(0.53, 0.106, 0.310933, 1)
1:1/1/physics_layer_0/polygon_0/points = PackedVector2Array(-40, -40, 40, -40, 40, 40, -40, 40)
3:2/next_alternative_id = 2
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-40, -40, 40, -40, 40, 40, -40, 40)
3:2/1 = 1
3:2/1/modulate = Color(0.53, 0.106, 0.310933, 1)
3:2/1/physics_layer_0/polygon_0/points = PackedVector2Array(-40, -40, 40, -40, 40, 40, -40, 40)
2:2/next_alternative_id = 2
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-40, -40, 40, -40, 40, 40, -40, 40)
2:2/1 = 1
2:2/1/modulate = Color(0.53, 0.106, 0.310933, 1)
2:2/1/physics_layer_0/polygon_0/points = PackedVector2Array(-40, -40, 40, -40, 40, 40, -40, 40)
1:2/next_alternative_id = 2
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-40, -40, 40, -40, 40, 40, -40, 40)
1:2/1 = 1
1:2/1/modulate = Color(0.53, 0.106, 0.310933, 1)
1:2/1/physics_layer_0/polygon_0/points = PackedVector2Array(-40, -40, 40, -40, 40, 40, -40, 40)

[sub_resource type="TileSet" id="TileSet_j4pjy"]
tile_size = Vector2i(80, 80)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_xgax2")

[node name="Node2D" type="Node2D"]
texture_filter = 1
script = ExtResource("1_x5vt7")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD7//z/AAAAAAAAAwD7//3/AAAAAAAAAwD7//7/AAAAAAAAAwD7////AAAAAAAAAwD7/wAAAAAAAAAAAwD7/wEAAAAAAAAAAwD7/wIAAAAAAAAAAwD7/wMAAAAAAAAAAwD7/wQAAAACAAIAAQD8//z/AAAAAAAAAwD8//3/AAAAAAAAAwD8//7/AAAAAAAAAwD8////AAAAAAAAAwD8/wAAAAAAAAAABAD8/wEAAAAAAAAAAwD8/wIAAAAAAAAAAwD8/wMAAAAAAAAAAwD8/wQAAAACAAIAAQD9//z/AAAAAAAAAwD9//3/AAAAAAAAAwD9//7/AAAAAAAABAD9////AAAAAAAAAwD9/wAAAAAAAAAAAwD9/wEAAAAAAAAABAD9/wIAAAAAAAAAAwD9/wMAAAAAAAAAAwD9/wQAAAACAAIAAQD+//z/AAAAAAAAAwD+//3/AAAAAAAAAwD+//7/AAAAAAAAAwD+////AAAAAAAAAwD+/wAAAAAAAAAAAwD+/wEAAAAAAAAABAD+/wIAAAAAAAAAAwD+/wMAAAAAAAAAAwD+/wQAAAACAAIAAQD///z/AAAAAAAAAwD///3/AAAAAAAAAwD///7/AAAAAAAAAwD/////AAAAAAAAAwD//wAAAAAAAAAAAwD//wEAAAAAAAAABAD//wIAAAAAAAAAAwD//wMAAAAAAAAAAwD//wQAAAACAAIAAQAAAPz/AAAAAAAAAwAAAP3/AAAAAAAAAwAAAP7/AAAAAAAAAwAAAP//AAAAAAAAAwAAAAAAAAAAAAAAAwAAAAEAAAAAAAAABAAAAAIAAAAAAAAAAwAAAAMAAAAAAAAAAwAAAAQAAAACAAIAAQABAPz/AAAAAAAAAwABAP3/AAAAAAAAAwABAP7/AAAAAAAAAwABAP//AAAAAAAAAwABAAAAAAAAAAAAAwABAAEAAAAAAAAABAABAAIAAAAAAAAAAwABAAMAAAAAAAAAAwABAAQAAAACAAIAAQACAPz/AAAAAAAAAwACAP3/AAAAAAAAAwACAP7/AAAAAAAABAACAP//AAAAAAAAAwACAAAAAAAAAAAAAwACAAEAAAAAAAAABAACAAIAAAAAAAAAAwACAAMAAAAAAAAAAwACAAQAAAACAAIAAQADAPz/AAAAAAAAAwADAP3/AAAAAAAAAwADAP7/AAAAAAAAAwADAP//AAAAAAAAAwADAAAAAAAAAAAABAADAAEAAAAAAAAAAwADAAIAAAAAAAAAAwADAAMAAAAAAAAAAwADAAQAAAACAAIAAQAEAPz/AAAAAAAAAwAEAP3/AAAAAAAAAwAEAP7/AAAAAAAAAwAEAP//AAAAAAAAAwAEAAAAAAAAAAAAAwAEAAEAAAAAAAAAAwAEAAIAAAAAAAAAAwAEAAMAAAAAAAAAAwAEAAQAAAACAAIAAQAFAPz/AAADAAEAAQAFAP3/AAADAAEAAQAFAP7/AAAAAAAABAAFAP//AAAAAAAAAwAFAAAAAAAAAAAAAwAFAAEAAAAAAAAABAAFAAIAAAADAAEAAQAFAAMAAAADAAEAAQAFAAQAAAADAAIAAQD6//v/AAABAAAAAQD6//z/AAABAAEAAQD6//3/AAABAAEAAQD6//7/AAABAAEAAQD6////AAABAAEAAQD6/wAAAAABAAEAAQD6/wEAAAABAAEAAQD6/wIAAAABAAEAAQD6/wMAAAABAAEAAQD6/wQAAAABAAIAAQD7//v/AAACAAAAAQD8//v/AAACAAAAAQD9//v/AAACAAAAAQD+//v/AAACAAAAAQD///v/AAACAAAAAQAAAPv/AAACAAAAAQABAPv/AAACAAAAAQACAPv/AAACAAAAAQADAPv/AAACAAAAAQAEAPv/AAACAAAAAQAFAPv/AAADAAAAAQAGAAAAAAAAAAAAAwAHAAAAAAAAAAAAAwAIAP//AAAAAAAAAwAJAP//AAAAAAAAAwAHAP//AAAAAAAAAwAGAP//AAAAAAAAAwAIAAAAAAAAAAAAAwAJAAAAAAAAAAAAAwAKAAAAAAAAAAAAAwALAAAAAAAAAAAAAwALAP//AAAAAAAAAwAKAP//AAAAAAAAAwAMAP//AAAAAAAAAwANAP//AAAAAAAAAwAMAAAAAAAAAAAAAwANAAAAAAAAAAAAAwAOAAAAAAAAAAAAAwAOAP//AAAAAAAAAwAJAP7/AAAAAAAAAwAJAP3/AAAAAAAAAwAJAPz/AAAAAAAAAwAJAPv/AAAAAAAAAwAKAPv/AAAAAAAAAwAKAPr/AAAAAAAAAwAKAPz/AAAAAAAAAwAKAP3/AAAAAAAAAwAKAP7/AAAAAAAAAwAJAPr/AAAAAAAAAwALAPr/AAAAAAAAAwALAPv/AAAAAAAAAwALAPz/AAAAAAAAAwALAP3/AAAAAAAAAwALAP7/AAAAAAAAAwAOAP7/AAAAAAAAAwAOAP3/AAAAAAAAAwAOAPz/AAAAAAAAAwANAPz/AAAAAAAAAwAMAPz/AAAAAAAAAwAMAPv/AAAAAAAAAwAMAPr/AAAAAAAAAwANAPr/AAAAAAAAAwAOAPr/AAAAAAAAAwAPAPr/AAAAAAAAAwANAPv/AAAAAAAAAwAOAPv/AAAAAAAAAwAPAPv/AAAAAAAAAwAPAPz/AAAAAAAAAwAPAP3/AAAAAAAAAwAPAP7/AAAAAAAAAwAPAP//AAAAAAAAAwAPAAAAAAAAAAAAAwAPAAEAAAAAAAAAAwAOAAEAAAAAAAAAAwALAAEAAAAAAAAAAwAKAAEAAAAAAAAAAwAJAAEAAAAAAAAAAwAPAAIAAAAAAAAAAwAOAAIAAAAAAAAAAwALAAIAAAAAAAAAAwAKAAIAAAAAAAAAAwAJAAIAAAAAAAAAAwAJAAMAAAAAAAAAAwAKAAMAAAAAAAAAAwALAAMAAAAAAAAAAwAMAAMAAAAAAAAAAwANAAMAAAAAAAAAAwAOAAMAAAAAAAAAAwAPAAMAAAAAAAAAAwAJAAQAAAAAAAAAAwAKAAQAAAAAAAAAAwALAAQAAAAAAAAAAwAMAAQAAAAAAAAAAwANAAQAAAAAAAAAAwAOAAQAAAAAAAAAAwAPAAQAAAAAAAAAAwAKAAUAAAAAAAAAAwAJAAUAAAAAAAAAAwALAAUAAAAAAAAAAwAMAAUAAAAAAAAAAwANAAUAAAAAAAAAAwAOAAUAAAAAAAAAAwAPAAUAAAAAAAAAAwAQAPr/AAAAAAAAAwAQAPv/AAAAAAAAAwAQAPz/AAAAAAAAAwAQAP3/AAAAAAAAAwAQAP7/AAAAAAAAAwAQAP//AAAAAAAAAwAQAAAAAAAAAAAAAwAQAAEAAAAAAAAAAwAQAAIAAAAAAAAAAwAQAAMAAAAAAAAAAwAQAAQAAAAAAAAAAwAQAAUAAAAAAAAAAwARAPv/AAAAAAAAAwARAPz/AAAAAAAAAwARAP3/AAAAAAAAAwASAP3/AAAAAAAAAwASAPz/AAAAAAAAAwASAPv/AAAAAAAAAwATAPz/AAAAAAAAAwATAP3/AAAAAAAAAwAUAP3/AAAAAAAAAwARAAQAAAAAAAAAAwASAAQAAAAAAAAAAwASAAMAAAAAAAAAAwARAAMAAAAAAAAAAwATAAMAAAAAAAAAAwATAAIAAAAAAAAAAwASAAIAAAAAAAAAAwARAAIAAAAAAAAAAwAUAAIAAAAAAAAAAwAMAAEAAAAAAAAABAAMAAIAAAAAAAAABAANAAIAAAAAAAAABAANAAEAAAAAAAAABAANAP3/AAAAAAAABAAMAP3/AAAAAAAABAAMAP7/AAAAAAAABAANAP7/AAAAAAAABAAGAP7/AAACAAAAAQAHAP7/AAACAAAAAQAGAAEAAAACAAIAAQAHAAEAAAACAAIAAQAJAAYAAAACAAIAAQAKAAYAAAACAAIAAQALAAYAAAACAAIAAQAMAAYAAAACAAIAAQANAAYAAAACAAIAAQAOAAYAAAACAAIAAQAPAAYAAAACAAIAAQAQAAYAAAACAAIAAQASAAUAAAACAAIAAQARAP7/AAAAAAAABAASAP7/AAACAAIAAQATAP7/AAACAAIAAQAJAPn/AAACAAAAAQAKAPn/AAACAAAAAQALAPn/AAACAAAAAQAMAPn/AAACAAAAAQANAPn/AAACAAAAAQAOAPn/AAACAAAAAQAPAPn/AAACAAAAAQAQAPn/AAACAAAAAQASAPr/AAACAAAAAQARAAEAAAAAAAAABAASAAEAAAACAAAAAQATAAEAAAACAAAAAQAIAP7/AAACAAEAAQAIAAEAAAACAAEAAQAIAAIAAAABAAEAAQAIAAMAAAABAAEAAQAIAAQAAAABAAEAAQAIAAUAAAABAAEAAQAIAAYAAAABAAIAAQAIAPn/AAABAAAAAQATAPr/AAADAAAAAQAVAP7/AAADAAIAAQAVAPz/AAADAAAAAQAUAPv/AAADAAAAAQAUAPz/AAACAAEAAQATAPv/AAACAAEAAQAVAP3/AAADAAEAAQAVAAIAAAADAAEAAQAVAAMAAAADAAIAAQAUAAQAAAADAAIAAQATAAUAAAADAAIAAQAUAP7/AAACAAIAAQAUAAEAAAACAAAAAQAUAAMAAAACAAEAAQATAAQAAAACAAEAAQARAAUAAAACAAEAAQARAPr/AAACAAEAAQARAPn/AAADAAAAAQARAAYAAAADAAIAAQAIAPr/AAABAAEAAQAIAPv/AAABAAEAAQAIAPz/AAABAAEAAQAIAP3/AAABAAEAAQARAP//AAADAAEAAQARAAAAAAADAAEAAQAVAAEAAAADAAAAAQA=")
tile_set = SubResource("TileSet_j4pjy")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 800.0
offset_bottom = 600.0
mouse_filter = 2

[node name="Menu" type="VBoxContainer" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -101.0
offset_top = -71.0
offset_right = 91.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextEdit" type="TextEdit" parent="CanvasLayer/UI/Menu"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
placeholder_text = "Enter a Nickname"

[node name="IP" type="TextEdit" parent="CanvasLayer/UI/Menu"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
placeholder_text = "Enter IP"

[node name="Host" type="Button" parent="CanvasLayer/UI/Menu"]
layout_mode = 2
text = "Host"

[node name="Join" type="Button" parent="CanvasLayer/UI/Menu"]
layout_mode = 2
text = "Join
"

[node name="NetworkInfo" type="RichTextLabel" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_right = 150.0
offset_bottom = 54.0
grow_horizontal = 2
bbcode_enabled = true
text = "[center]Network Info:
ID: 0"

[connection signal="pressed" from="CanvasLayer/UI/Menu/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/Menu/Join" to="." method="_on_join_pressed"]
